--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Kirby</title>
-  <link rel="stylesheet" href="Kirby.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class-="hand-group">
@@ -39,3 +39,4 @@
   </div>
 </body>
 </html>
+
